--- a/public/styles.css
+++ b/public/styles.css
@@ -9,6 +9,10 @@ html {
 body {
   background: #eee;
   padding: 0 16px;
+  background-color: #272329;
+background-image: url("https://www.transparenttextures.com/patterns/binding-dark.png");
+/* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */
+  
 }
 
 header {
